# macs

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml  coverage.yml
.zed/: settings.json
include/: exfor_client.hpp  exfor_client_detail.hpp  macs_calculator.hpp
src/: CMakeLists.txt  exfor_client.cpp  exfor_client.hpp  macs_calculator.cpp  main.cpp
tests/: CMakeLists.txt  test_exfor_client.cpp  test_macs_calculator.cpp
